fix: Add missing dependencies for chat components
- Add emoji-picker-react for emoji picker in MessageInput
- Add react-dropzone for file upload functionality
- Fix Vercel build errors for missing modules
- Both packages are required for chat-v2 MessageInput component

--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
+    "axios": "^1.13.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "emoji-picker-react": "^4.15.1",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "openai": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
     "recharts": "^3.3.0",
-    "tailwind-merge": "^3.3.1"
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.3.1",
+    "wavesurfer.js": "^7.11.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
